# doomgeneric

./: .gitignore  Cargo.toml  build.rs  flake.nix
doomgeneric/: doomgeneric.c  i_system.c
include/: ctype.h  errno.h  stdio.h  stdlib.h  string.h
src/: libc.rs  main.rs
