[package]
name = "doomgeneric-hyperion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libstd.path = "../hyperion/crates/libstd"
printf-compat = { version = "0.1", default-features = false }
libm = "0.2"

[build-dependencies]
# cc = { version = "1", features = ["parallel"] }
cc = "1"
