[package]
name = "doomgeneric-hyperion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libstd.path = "../hyperion/crates/libstd"
printf-compat = { version = "0.1", default-features = false }
libm = "0.2"
hyperion-color.path = "../hyperion/crates/color"

crossbeam = { version = "0.8", default-features = false, features = ["alloc"] }
ringbuf = { version = "0.3", default-features = false, features = ["alloc"] }

serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[build-dependencies]
# cc = { version = "1", features = ["parallel"] }
cc = "1"
